// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add card render tests renders the bottom sheet add card, not visible 1`] = `null`;

exports[`Add card render tests renders the bottom sheet add card, visible, manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="hello"
/>
`;

exports[`Add card render tests renders the bottom sheet add card, visible, non manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="hello"
/>
`;

exports[`LocationManagement Navigator Renders the LocationManagement Navigator, manager 1`] = `
<StackNavigator
  headerMode="float"
  screenOptions={
    Object {
      "headerStyle": Object {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
    }
  }
>
  <Screen
    component={[Function]}
    name="Zones"
    options={
      Object {
        "headerRight": [Function],
        "headerTitle": "[missing \\"en.LOCATION.ZONES\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Aisles"
    options={
      Object {
        "headerTitle": "[missing \\"en.LOCATION.AISLES\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Sections"
    options={
      Object {
        "headerRight": [Function],
        "headerTitle": "[missing \\"en.LOCATION.SECTIONS\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="LocationDetails"
    options={
      Object {
        "headerTitle": "[missing \\"en.LOCATION.LOCATION_DETAILS\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddLocation"
    options={
      Object {
        "headerBackTitleVisible": false,
        "headerTitle": "[missing \\"en.LOCATION.ADD_NEW_LOCATION\\" translation]",
        "headerTitleAlign": "left",
        "headerTitleStyle": Object {
          "fontSize": 18,
        },
      }
    }
  />
</StackNavigator>
`;

exports[`LocationManagement Navigator Renders the LocationManagement Navigator, non manager 1`] = `
<StackNavigator
  headerMode="float"
  screenOptions={
    Object {
      "headerStyle": Object {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
    }
  }
>
  <Screen
    component={[Function]}
    name="Zones"
    options={
      Object {
        "headerRight": [Function],
        "headerTitle": "[missing \\"en.LOCATION.ZONES\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Aisles"
    options={
      Object {
        "headerTitle": "[missing \\"en.LOCATION.AISLES\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="Sections"
    options={
      Object {
        "headerRight": [Function],
        "headerTitle": "[missing \\"en.LOCATION.SECTIONS\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="LocationDetails"
    options={
      Object {
        "headerTitle": "[missing \\"en.LOCATION.LOCATION_DETAILS\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddLocation"
    options={
      Object {
        "headerBackTitleVisible": false,
        "headerTitle": "[missing \\"en.LOCATION.ADD_NEW_LOCATION\\" translation]",
        "headerTitleAlign": "left",
        "headerTitleStyle": Object {
          "fontSize": 18,
        },
      }
    }
  />
</StackNavigator>
`;

exports[`Remove aisle render tests renders the bottom sheet remove aisle, non visible, non manager option 1`] = `null`;

exports[`Remove aisle render tests renders the bottom sheet remove aisle, visible, manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="Remove aisle"
/>
`;

exports[`Remove card render tests renders the bottom sheet add card, not visible 1`] = `null`;

exports[`Remove card render tests renders the bottom sheet add card, visible, manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="hello"
/>
`;

exports[`Remove card render tests renders the bottom sheet add card, visible, non manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="hello"
/>
`;
